# django-models

./: db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_rename_meals_snack.py
templates/: base.html  snack_detail.html  snack_list.html
