[tool.poetry]
name = "snack_tracker"
version = "0.1.0"
description = ""
authors = ["YahyaOmari <yahya.omari@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
